--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Afrita skal þessa skrá í .env og setja rétta slóð á gagnagrunn
 # DATABASE_URL=postgres://<USER>:<PASS>@localhost/<DATABASENAME>
-DATABASE_URL=postgres://:@localhost/vef2-2021-v3
+DATABASE_URL=postgres://USR:PWD@localhost/smly
 SESSION_SECRET=
