--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./src/index.js"
+    "dev": "node ./src/index.js",
+    "setup": "node ./src/setup.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0"
