--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "moment": "^2.29.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "xss": "^1.0.14"
   }
 }
