--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "moment": "^2.29.4",
+    "node-fetch": "^3.3.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
